realización de la kata