@@ -9,6 +9,7 @@ import util.DataUtil;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /*
     Goal: Retrieve the id, title, and smallest box art url for every video
@@ -19,6 +20,14 @@ public class Kata7 {
     public static List<Map> execute() {
         List<MovieList> movieLists = DataUtil.getMovieLists();
 
-        return ImmutableList.of(ImmutableMap.of("id", 5, "title", "Bad Boys", "boxart", "url"));
+        return movieLists
+                .stream()
+                .flatMap(movie -> movie.getVideos().stream())
+                .map(movie -> Map.of("id", movie.getId(), "title", movie.getTitle(), "boxart", movie
+                        .getBoxarts()
+                        .stream()
+                        .reduce((item1, item2)-> item1.getHeight()*item1.getWidth() < item2.getWidth()*item2.getHeight() ? item1:item2)
+                        .map(m -> m.getUrl())
+                )).collect(Collectors.toList());
     }
 }
